# langgraph-supervisor-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
langgraph_multi_agent/: handoff.py  workflow.py
langgraph_multi_agent/agents/: __init__.py  agent.py  langgraph_agent.py  tool_calling_agent.py
langgraph_multi_agent/architectures/: __init__.py  supervisor.py
langgraph_multi_agent_supervisor/: __init__.py  agent.py  handoff.py  supervisor.py
langgraph_supervisor/: __init__.py  agent_name.py  handoff.py  supervisor.py
tests/: test_agent_name.py  test_supervisor.py
