[project]
name = "langgraph-multi-agent-supervisor"
version = "0.0.1"
description = "An implementation of a supervisor multi-agent architecture using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.70",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
