[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langgraph-supervisor"
version = "0.0.3"
description = "An implementation of a supervisor multi-agent architecture using LangGraph"
authors = [
    {name = "Vadym Barda", email = "19161700+vbarda@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.71",
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-socket>=0.7.0",
    "ruff>=0.9.4",
]
